test: ensure repo root on pytest path

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Copy this file to .env and fill in your own secrets.
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+BOT_TOKEN=your-telegram-bot-token
+# Legacy fallback (optional):
+# TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 # optional when using subscribers.json. Keep it for fallback/sanity tests.
 TELEGRAM_CHAT_ID=your-target-chat-id
 CRYPTOCOMPARE_API_KEY=optional-cryptocompare-api-key
