--- a/.github/workflows/xrpbot.yml
+++ b/.github/workflows/xrpbot.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run bot
         env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
           CRYPTOCOMPARE_API_KEY: ${{ secrets.CRYPTOCOMPARE_API_KEY }}
-        run: python trigger_xrp_bot.py
+        run: python -m src.signal_bot.ci_entry --mode summary
